--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 	"private": true,
 	"license": "UNLICENSED",
 	"scripts": {
-		"build": "npm install && npm run build && npm run prisma:generate",
-		"start": "npm run prisma:migrate && npm run start:prod",
+		"build": "nest build",
+		"start": "nest start",
 		"start:dev": "nest start --watch",
 		"start:debug": "nest start --debug --watch",
 		"start:prod": "node dist/main",
